--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </h4>
       </section>
       <footer class="hero-cta">
-        <a href="https://app.qzzr.com/account/signup" class="button button-large button-primary h6 b"}}
+        <a href="https://app.qzzr.com/account/signup" class="button button-large button-primary h6 b">
           <span class="button-label pt3">Get started now</span>
           <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
         </a>
