--- a/agencies/index.html
+++ b/agencies/index.html
@@ -41,23 +41,11 @@
   <meta property="og:image" content="/assets/images/default-quiz-image.png" />
 
   <!-- <meta name="FB_ID" content="<%= get_fb_id %>"/> -->
-
-  <!-- Hack for fackbook redirect anchor -->
-  <script type="text/javascript">
-    if (window.location.hash && window.location.hash == '#_=_') {
-        window.location.hash = '';
-    }
-  </script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-
   
-  <script src="/assets/javascripts/modernizr.js"></script>
-
   <!-- CSS -->
-  <link rel="stylesheet" href="/assets/stylesheets/application.css">
+  <link rel='stylesheet' href='../assets/stylesheets/application.css'>
+  <link rel='stylesheet' href='../assets/stylesheets/jquery.fancybox.css'>
 
-  <link rel='stylesheet' href='../assets/stylesheets/colorbox.css'>
   <!-- Fav and Touch Icons -->
   <link href="assets/ico/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
   <link href="assets/ico/apple-touch-icon-57-precomposed.png" rel="apple-touch-icon-precomposed" type="image/png">
@@ -67,6 +55,20 @@
   <link href="assets/ico/apple-touch-icon-120-precomposed.png" rel="apple-touch-icon-precomposed" type="image/png">
   <link href="assets/ico/apple-touch-icon-144-precomposed.png" rel="apple-touch-icon-precomposed" type="image/png">
   <link href="assets/ico/apple-touch-icon-152-precomposed.png" rel="apple-touch-icon-precomposed" type="image/png">
+
+  
+  <!-- Scripts -->
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src='../assets/javascripts/modernizr.js'></script>
+
+  <!-- Hack for fackbook redirect anchor -->
+  <script type="text/javascript">
+    if (window.location.hash && window.location.hash == '#_=_') {
+        window.location.hash = '';
+    }
+  </script>
+
 
 </head>
 <body>
@@ -647,7 +649,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div> 
 
 
- <div id="showVideoModal" class='modal modal-video' style="display: none">
+ <div class="modal-backdrop js-close-modal" style="display: none"></div>
+
+<div id="videoModal" class='modal modal-video' style="display: none">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
@@ -666,10 +670,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <a class="modal-close js-close-modal"><i class="icon-ss-delete"></i></a>
 </div>
 
-  <script src='../assets/javascripts/jquery.colorbox-min.js'></script>
+  <script src='../assets/javascripts/jquery.fancybox.js'></script>
   <script src='../assets/javascripts/jquery.fitvids.js'></script>
+
+
   <!-- Google Analytics -->
- 
   // <script>
   //   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   //   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -718,10 +723,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       $('.dropdown').removeClass('is-active');
     });
 
-    var modal = $('#showVideoModal');
-    $('.js-colorbox-trigger').colorbox({inline: true, href: modal, className: 'modal-backdrop'});
+    $('.js-modal-trigger').click(function(){
+      $('#videoModal, .modal-backdrop').show();
+    });
+
+    $('.js-close-modal').click(function(){
+      $('#videoModal, .modal-backdrop').hide();
+    });
+
+    $('#videoModal').fitVids();
+
 })
 </script>
+
 <!-- Typekit -->
 <script type="text/javascript" src="//use.typekit.net/ncg3ahx.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
