added track scores

--- a/index.html
+++ b/index.html
@@ -457,6 +457,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="list-item">
               <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
             </li>
+            <li class="list-item">
+              <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
+            </li>
+
           </ul>
         </div>
 
