--- a/tour/index.html
+++ b/tour/index.html
@@ -222,6 +222,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <div class="page-wrapper purple-bg pt4 pb4 text-center">
   <a href="https://app.qzzr.com/account/signup" class="button button-square-large button-with-sub-label button-white">
+  <a href="https://app.qzzr.com/account/signup" class="button button-square-large button-with-sub-label button-white">
     <span class="button-label pt3" style="display: block;">Get started now</span>
     <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
   </a>
@@ -498,6 +499,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="list-item">
               <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
             </li>
+            <li class="list-item">
+              <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
+            </li>
+
           </ul>
         </div>
 
