--- a/index-old.html
+++ b/index-old.html
@@ -531,6 +531,10 @@ of awesomeness."
             <li class="list-item">
               <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
             </li>
+            <li class="list-item">
+              <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
+            </li>
+
           </ul>
         </div>
 
