--- a/pricing/index.html
+++ b/pricing/index.html
@@ -173,7 +173,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </ul>
       </div>
       <div class="text-center">
-        <a href="https://app.qzzr.com/account/signup" class="button button-outline button-primary"> Get started for free now</a>
+        <a href="https://app.qzzr.com/account/signup class="button button-outline button-primary">Get started for free now</a>
       </div>
     </div>
 
@@ -213,7 +213,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </ul>
       </div>
       <div class="text-center">
-        <a href="https://app.qzzr.com/account/signup" class="button button-outline button-primary">Get started for free now</a>
+        <a data-ember-action="7" class="button button-outline button-primary">Get started for free now</a>
       </div>
     </div>
 
@@ -467,6 +467,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="list-item">
               <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
             </li>
+            <li class="list-item">
+              <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
+            </li>
+
           </ul>
         </div>
 
