Overview Footer Links all working

--- a/index-old.html
+++ b/index-old.html
@@ -506,10 +506,10 @@ of awesomeness."
               <a href="/" class="list-item-link">Home</a>
             </li>
             <li class="list-item">
-              <a href="/pricing" class='list-item-link'>Pricing</a>
+              <a href="pricing/index.html" class='list-item-link'>Pricing</a>
             </li>
             <li class="list-item">
-              <a href="/about" class='list-item-link'>About</a>
+              <a href="about/index.html" class='list-item-link'>About</a>
             </li>
             <li class="list-item">
               <a href="http://blog.qzzr.com" class="list-item-link">
@@ -517,7 +517,7 @@ of awesomeness."
               </a>
             </li>
             <li class="list-item">
-              <a href="/agencies" class='list-item-link'>Need a quiz made?</a>
+              <a href="<!-- @path agencies/index.html-->" class='list-item-link'>Need a quiz made?</a>
             </li>
         </div>
 
