--- a/generate-qualified-leads/index.html
+++ b/generate-qualified-leads/index.html
@@ -286,10 +286,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="/" class="list-item-link">Home</a>
             </li>
             <li class="list-item">
-              <a href="/pricing" class='list-item-link'>Pricing</a>
+              <a href="../pricing/index.html" class='list-item-link'>Pricing</a>
             </li>
             <li class="list-item">
-              <a href="/about" class='list-item-link'>About</a>
+              <a href="../about/index.html" class='list-item-link'>About</a>
             </li>
             <li class="list-item">
               <a href="http://blog.qzzr.com" class="list-item-link">
@@ -297,7 +297,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </a>
             </li>
             <li class="list-item">
-              <a href="/agencies" class='list-item-link'>Need a quiz made?</a>
+              <a href="<!-- @path agencies/index.html-->" class='list-item-link'>Need a quiz made?</a>
             </li>
         </div>
 
