--- a/pricing/index.html
+++ b/pricing/index.html
@@ -175,7 +175,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </ul>
       </div>
       <div class="text-center">
-        <a href="https://app.qzzr.com/account/signup class="button button-outline button-primary">Get started for free now</a>
+        <a href="https://app.qzzr.com/account/signup" class="button button-outline button-primary">Get started for free now</a>
       </div>
     </div>
 
@@ -441,11 +441,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="list-item">
               <a href="/" class="list-item-link">Home</a>
             </li>
-            <li class="list-item">
-              <a href="/pricing" class='list-item-link'>Pricing</a>
+            <li class="current-parent current list-item">
+              <a href="index.html" class='current-parent current list-item-link'>Pricing</a>
             </li>
             <li class="list-item">
-              <a href="/about" class='list-item-link'>About</a>
+              <a href="../about/index.html" class='list-item-link'>About</a>
             </li>
             <li class="list-item">
               <a href="http://blog.qzzr.com" class="list-item-link">
@@ -453,7 +453,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </a>
             </li>
             <li class="list-item">
-              <a href="/agencies" class='list-item-link'>Need a quiz made?</a>
+              <a href="../agencies/index.html" class="list-item-link">Need a Quiz Made?</a>
             </li>
         </div>
 
