added link to want a quiz made

--- a/agencies/index.html
+++ b/agencies/index.html
@@ -588,7 +588,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </a>
             </li>
             <li class="list-item">
-              <a href="<!-- @path agencies/index.html-->" class='list-item-link'>Need a quiz made?</a>
+              <a href="../agencies/index.html" class="list-item-link">Need a Quiz Made?</a>
             </li>
         </div>
 
