--- a/index-old.html
+++ b/index-old.html
@@ -517,7 +517,7 @@ of awesomeness."
               </a>
             </li>
             <li class="list-item">
-              <a href="<!-- @path agencies/index.html-->" class='list-item-link'>Need a quiz made?</a>
+              <a href="../agencies/index.html" class="list-item-link">Need a Quiz Made?</a>
             </li>
         </div>
 
