drive social traffic link working

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <section class="box-main">
               Launch a viral quiz, redirect all of that social lift right back to your site.
               <p class="mt4">
-                <a href="/drive-social-traffic" class='button button-small button-outline button-white'</a>Learn more</a>
+                <a href="../drive-social-traffic/index.html" class='button button-small button-outline button-white'</a>Learn more</a>
               </p>
             </section>
           </section>
@@ -451,7 +451,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">Use cases</li>
             <li class="list-item">
-              <a href="/drive-social-traffic" class='list-item-link'>Drive social traffic</a>
+              <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
               <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
