--- a/index-old.html
+++ b/index-old.html
@@ -525,7 +525,7 @@ of awesomeness."
           <ul class="list-nav-inverted">
             <li class="list-item-header">Use cases</li>
             <li class="list-item">
-              <a href="/drive-social-traffic" class='list-item-link'>Drive social traffic</a>
+              <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
               <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
