--- a/tour/index.html
+++ b/tour/index.html
@@ -378,7 +378,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </h3>
       <p class="opacity-5 hyphenate">Qzzr is awesome at recruiting new fans and followers for you. A Qzzr outcome quiz can easily have over a 65% share rate on social media. You can set your quiz up so that all of those people are driven back to your site or blog to take your quiz.</p>
       <p>
-        <a href="/drive-social-traffic" class='link link-purple'}}Learn more</a>
+        <a href="../drive-social-traffic/index.html" class='link link-purple'}}Learn more</a>
       </p>
     </div>
   </div>
@@ -493,7 +493,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">Use cases</li>
             <li class="list-item">
-              <a href="/drive-social-traffic" class='list-item-link'>Drive social traffic</a>
+              <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
               <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
