added generate qualified leads link

--- a/content/index.html
+++ b/content/index.html
@@ -207,10 +207,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
-              <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
+              <a href="../generate-qualified-leads/index.html" class='list-item-link'>Generate qualified leads</a>
             </li>
             <li class="list-item">
-              <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
+              <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
             </li>
             <li class="list-item">
               <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
