--- a/tour/index.html
+++ b/tour/index.html
@@ -396,7 +396,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </h3>
       <p class="opacity-5 hyphenate">Qzzr is the world’s greatest lead gen tool. A quiz is 1) irresistible 2) insanely sharable and 3) it can allow your visitors to qualify themselves. If they opt to provide their info, you already know exactly how they answered your questions.</p>
       <p>
-        <a href="/generate-qualified-leads" class='link link-purple'}}Learn more</a>
+        <a href="../generate-qualified-leads/index.html" class='link link-purple'}}Learn more</a>
       </p>
     </div>
   </div>
@@ -496,10 +496,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
-              <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
+              <a href="../generate-qualified-leads/index.html" class='list-item-link'>Generate qualified leads</a>
             </li>
             <li class="list-item">
-              <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
+              <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
             </li>
             <li class="list-item">
               <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
