--- a/index-old.html
+++ b/index-old.html
@@ -388,7 +388,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <section class="box-main">
                 Quizzes are the next killer lead gen tool. Capture leads and know exactly how leads answered your questions.
                 <p class="mt4">
-                  <a href="/generate-qualified-leads" class='button button-small button-outline button-white'</a>Learn more</a>
+                  <a href="../generate-qualified-leads/index.html" class='button button-small button-outline button-white'</a>Learn more</a>
                 </p>
               </section>
             </section>
@@ -528,10 +528,10 @@ of awesomeness."
               <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
-              <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
+              <a href="../generate-qualified-leads/index.html" class='list-item-link'>Generate qualified leads</a>
             </li>
             <li class="list-item">
-              <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
+              <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
             </li>
             <li class="list-item">
               <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
