--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <section class="box-main">
               The new killer lead gen tool - capture leads with all of the question data tied to it.
               <p class="mt4">
-                <a href="/generate-qualified-leads" class='button button-small button-outline button-white'</a>Learn more</a>
+                <a href="../generate-qualified-leads/index.html" class='button button-small button-outline button-white'</a>Learn more</a>
               </p>
             </section>
           </section>
@@ -454,10 +454,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
-              <a href="/generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
+              <a href="../generate-qualified-leads/index.html" class='list-item-link'>Generate qualified leads</a>
             </li>
             <li class="list-item">
-              <a href="/present-targeted-offers" class='list-item-link'>Present targeted offers</a>
+              <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
             </li>
             <li class="list-item">
               <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
