added links to Privacy Terms and Content

--- a/index-old.html
+++ b/index-old.html
@@ -565,13 +565,13 @@ of awesomeness."
           <ul class="list-nav-inverted">
             <li class="list-item-header">&copy; 2014 Qzzr</li>
             <li class="list-item">
-              <a href="/terms" class='list-item-link'>Terms of service</a>
+              <a href="../terms/index.html" class='list-item-link'>Terms of service</a>
             </li>
             <li class="list-item">
-              <a href="/privacy" class='list-item-link'>Privacy policy</a>
+              <a href="../privacy/index.html" class='list-item-link'>Privacy policy</a>
             </li>
             <li class="list-item">
-              <a href="/content" class='list-item-link'>Content Guidelines</a>
+              <a href="../content/index.html" class='list-item-link'>Content Guidelines</a>
             </li>
           </ul>
         </div>
