--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <section class="box-main">
               Direct people taking your quiz to the perfect offer.
               <p class="mt4">
-                <a href="/present-targeted-offers" class='button button-small button-outline button-white'</a>Learn more</a>
+                <a href="../present-targeted-offers/index.html" class='button button-small button-outline button-white'</a>Learn more</a>
               </p>
             </section>
           </section>
@@ -491,13 +491,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">&copy; 2014 Qzzr</li>
             <li class="list-item">
-              <a href="/terms" class='list-item-link'>Terms of service</a>
+              <a href="../terms/index.html" class='list-item-link'>Terms of service</a>
             </li>
             <li class="list-item">
-              <a href="/privacy" class='list-item-link'>Privacy policy</a>
+              <a href="../privacy/index.html" class='list-item-link'>Privacy policy</a>
             </li>
             <li class="list-item">
-              <a href="/content" class='list-item-link'>Content Guidelines</a>
+              <a href="../content/index.html" class='list-item-link'>Content Guidelines</a>
             </li>
           </ul>
         </div>
