--- a/tour/index.html
+++ b/tour/index.html
@@ -414,7 +414,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </h3>
       <p class="opacity-5 hyphenate">It’s nice that quiz takers can share with the world what kind of shoes they are, but what if they could be presented with an 20% off offer to buy those exact shoes right now. They can. #gamechanger</p>
       <p>
-        <a href="/present-targeted-offers" class='link link-purple'}}Learn more</a>
+        <a href="../present-targeted-offers/index.html" class='link link-purple'}}Learn more</a>
       </p>
     </div>
   </div>
@@ -533,13 +533,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">&copy; 2014 Qzzr</li>
             <li class="list-item">
-              <a href="/terms" class='list-item-link'>Terms of service</a>
+              <a href="../terms/index.html" class='list-item-link'>Terms of service</a>
             </li>
             <li class="list-item">
-              <a href="/privacy" class='list-item-link'>Privacy policy</a>
+              <a href="../privacy/index.html" class='list-item-link'>Privacy policy</a>
             </li>
             <li class="list-item">
-              <a href="/content" class='list-item-link'>Content Guidelines</a>
+              <a href="../content/index.html" class='list-item-link'>Content Guidelines</a>
             </li>
           </ul>
         </div>
