--- a/pricing/index.html
+++ b/pricing/index.html
@@ -175,7 +175,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </ul>
       </div>
       <div class="text-center">
-        <a href="https://app.qzzr.com/account/signup class="button button-outline button-primary">Get started for free now</a>
+        <a href="https://app.qzzr.com/account/signup" class="button button-outline button-primary">Get started for free now</a>
       </div>
     </div>
 
@@ -501,13 +501,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">&copy; 2014 Qzzr</li>
             <li class="list-item">
-              <a href="/terms" class='list-item-link'>Terms of service</a>
+              <a href="../terms/index.html" class='list-item-link'>Terms of service</a>
             </li>
             <li class="list-item">
-              <a href="/privacy" class='list-item-link'>Privacy policy</a>
+              <a href="../privacy/index.html" class='list-item-link'>Privacy policy</a>
             </li>
             <li class="list-item">
-              <a href="/content" class='list-item-link'>Content Guidelines</a>
+              <a href="../content/index.html" class='list-item-link'>Content Guidelines</a>
             </li>
           </ul>
         </div>
