link to agencies page added

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -174,9 +174,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <li class="list-item">Community support</li>
         </ul>
       </div>
-      <div class="text-center">
+<!--       <div class="text-center">
         <a href="https://app.qzzr.com/account/signup" class="button button-outline button-primary">Get started for free now</a>
-      </div>
+      </div> -->
     </div>
 
     <hr class="rule">
@@ -357,7 +357,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="text-center pb7">
     <p class="h3 mb4">Want a quiz made for you?</p>
-    {{#link-to 'marketing.agencies' class='button button-outline button-primary'}}
+    <a href="../agencies/index.html" class='marketing.agencies button button-outline button-primary'>
       Talk with one of these agencies
     </a>
     <hr class="rule mt6">
