qzzr pro button redirect

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -312,7 +312,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </section>
     <footer class="box-footer">
       <script id="metamorph-53-start" type="text/x-placeholder"></script>
-        <a data-ember-action="13" class="app-select-plan button"><script id="metamorph-54-start" type="text/x-placeholder"></script>Get started<script id="metamorph-54-end" type="text/x-placeholder"></script></a>
+        <a href="https://app.qzzr.com/account/signup_pro/39" class="app-select-plan button"><script id="metamorph-54-start" type="text/x-placeholder"></script>Get started<script id="metamorph-54-end" type="text/x-placeholder"></script></a>
       <script id="metamorph-53-end" type="text/x-placeholder"></script>
     </footer>
   </article> 
