--- a/content/index.html
+++ b/content/index.html
@@ -213,7 +213,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
             </li>
             <li class="list-item">
-              <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
+              <a href="../track-quiz-scores/index.html" class='list-item-link'>Track Quiz Scores</a>
             </li>
 
           </ul>
