--- a/index-old.html
+++ b/index-old.html
@@ -534,7 +534,7 @@ of awesomeness."
               <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
             </li>
             <li class="list-item">
-              <a href="https://app.qzzr.com/pro/track-quiz-scores" class='list-item-link'>Track Quiz Scores</a>
+              <a href="../track-quiz-scores/index.html" class='list-item-link'>Track Quiz Scores</a>
             </li>
 
           </ul>
