--- a/pricing/index.html
+++ b/pricing/index.html
@@ -91,17 +91,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     QZZR
   </a>
   <nav class="nav-tabs nav-bar-tabs">
-  <a href="/" class="nav-link">
+  <a href="https://www.qzzr.com" class="nav-link">
     Home
   </a>
-  <a href="/trending" class="nav-link">
+  <a href="https://www.qzzr.com/trending" class="nav-link">
     Popular
   </a>
-  <a href="/topics" class="nav-link">
+  <a href="https://www.qzzr.com/topics" class="nav-link">
     Topics
   </a>
   <span class="dropdown dropdown-nav-overflow">
-    <a href="#" class="nav-link dropdown-trigger">
+    <a class='nav-link dropdown-trigger js-dropdown-trigger' href="#toggleShowUses">
       More
     </a>
     <section class="dropdown-menu">
