--- a/pricing/index.html
+++ b/pricing/index.html
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <a class="list-item-label" href="http://blog.qzzr.com/">Blog</a>
         </li>
         <li class="list-item">
-          <a class="list-item-label" href="https://www.qzzr.com/topics">Help &amp; support</a>
+          <a class="list-item-label" href="mailto:hello@qzzr.co">Help &amp; support</a>
         </li>
       </ul>
     </section>
