added tour page

--- a/tour/index.html
+++ b/tour/index.html
@@ -132,7 +132,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="page-main">
 
   <nav class="nav-bar nav-bar-marketing">
-
+    <a href="index.html" class="current-parent current nav-link">Tour</a>  
+    
     <a href="../index.html" class='nav-link'>Overview</a>
 
     <div class="dropdown mln">
