fixed video autoplay

--- a/present-targeted-offers/index.html
+++ b/present-targeted-offers/index.html
@@ -74,17 +74,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <ul class="dropdown-menu list list-picker">
         <li class="list-item pl3">
           <a href="../drive-social-traffic/index.html" class='list-item-label'>
-            Drive Social Traffic
+            Drive social traffic
           </a>
         </li>
         <li class="list-item pl3">
           <a href="../generate-qualified-leads/index.html" class='list-item-label h8'>
-            Capture Qualified Leads
+            Capture qualified leads
           </a>
         </li>
         <li class="current-parent current list-item pl3">
           <a href="index.html" class='current-parent current list-item-label'>
-            Present Targeted Offers
+            Present targeted offers
           </a>
         </li>
       </ul>
@@ -359,7 +359,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <iframe src="//player.vimeo.com/video/102863517?title=0&amp;byline=0&amp;portrait=0&amp;color=9559ce&amp;autoplay=1" width="500" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="//player.vimeo.com/video/102863517?title=0&amp;byline=0&amp;portrait=0&amp;color=9559ce&amp;autoplay=0" width="500" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         
         <div class="text-center pt4">
           <a href='https://app.qzzr.com/account/signup' class="button button-large button-primary h6 b">
