--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <ul class="dropdown-menu list list-picker">
         <li class="list-item pl3">
           <a href="drive-social-traffic/index.html" class='list-item-label'>
-            Drive Social Traffic
+            Drive social traffic
           </a>
         </li>
         <li class="list-item pl3">
           <a href="generate-qualified-leads/index.html" class='list-item-label h8'>
-            Capture Qualified Leads
+            Capture qualified leads
           </a>
         </li>
         <li class="list-item pl3">
           <a href="present-targeted-offers/index.html" class='list-item-label'>
-            Present Targeted Offers
+            Present targeted offers
           </a>
         </li>
       </ul>
@@ -152,7 +152,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <span class="wm-block">Present offers</span>
     </h4>
     <div class="text-center pt4 pb5">
-      <a href="https://app.qzzr.com/account/signup" style="width: 280px" class="button button-large button-primary h6 b mr2 ml2 mb2">
+      <a href="https://app.qzzr.com/account/signup" class="button button-large button-primary h6 b mr2 ml2 mb2">
         Get started now
       </a>
       <a href="#videoModal" style="width: 280px" class="button button-large h6 b button-outline button-white js-modal-trigger mr2 ml2 mb2">
@@ -652,7 +652,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <iframe src="//player.vimeo.com/video/102863517?title=0&amp;byline=0&amp;portrait=0&amp;color=9559ce&amp;autoplay=1" width="500" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="//player.vimeo.com/video/102863517?title=0&amp;byline=0&amp;portrait=0&amp;color=9559ce&amp;autoplay=0" width="500" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         
         <div class="text-center pt4">
           <a href='https://app.qzzr.com/account/signup' class="button button-large button-primary h6 b">
