fixing broken stuff on tour page

--- a/tour/index.html
+++ b/tour/index.html
@@ -218,7 +218,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="grid">
     <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0">
       <hr class="rule mt4 mb6">
-      <blockquote class="quote quote-big is-clickable" {{action goToAnchor "marketing.about" "#team"}}>
+      <blockquote class="quote quote-big">
         <p class="quote-blurb">
           It’s not done until it’s simple.
         </p>
@@ -288,7 +288,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="page-wrapper pt7 pb7">
   <div class="grid">
     <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0">
-      <blockquote class="quote quote-big is-clickable" {{action goToAnchor "marketing.about" "#team"}}>
+      <blockquote class="quote quote-big">
         <p class="quote-blurb">
           At every turn, the experience should be remarkable.
         </p>
@@ -359,7 +359,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="page-wrapper pb7 pt7">
   <div class="grid">
     <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0">
-      <blockquote class="quote quote-big is-clickable" {{action goToAnchor "marketing.about" "#team"}}>
+      <blockquote class="quote quote-big">
         <p class="quote-blurb">
           Technology should not get in the way of the experience, but be the silent supporter.   It should feel like magic.
         </p>
@@ -386,7 +386,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </h3>
       <p class="opacity-5 hyphenate">Qzzr is awesome at recruiting new fans and followers for you. A Qzzr outcome quiz can easily have over a 65% share rate on social media. You can set your quiz up so that all of those people are driven back to your site or blog to take your quiz.</p>
       <p>
-        <a href="../drive-social-traffic/index.html" class='link link-purple'}}Learn more</a>
+        <a href="/drive-social-traffic" class='link link-purple'>Learn more</a>
       </p>
     </div>
   </div>
@@ -404,7 +404,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </h3>
       <p class="opacity-5 hyphenate">Qzzr is the world’s greatest lead gen tool. A quiz is 1) irresistible 2) insanely sharable and 3) it can allow your visitors to qualify themselves. If they opt to provide their info, you already know exactly how they answered your questions.</p>
       <p>
-        <a href="../generate-qualified-leads/index.html" class='link link-purple'}}Learn more</a>
+        <a href="/generate-qualified-leads" class='link link-purple'>Learn more</a>
       </p>
     </div>
   </div>
@@ -422,33 +422,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </h3>
       <p class="opacity-5 hyphenate">It’s nice that quiz takers can share with the world what kind of shoes they are, but what if they could be presented with an 20% off offer to buy those exact shoes right now. They can. #gamechanger</p>
       <p>
-        <a href="../present-targeted-offers/index.html" class='link link-purple'}}Learn more</a>
-      </p>
-    </div>
-  </div>
-
-  <div class="media media-split media-split-flipped mt5">
-    <div class="media-block">
-      <figure class="figure figure-full figure-rounded">
-        <img src="scores/3.jpg"class="figure-image">
-      </figure>
-    </div>
-
-    <div class="media-content">
-      <h3 class="h3 pb3">
-        Track scores
-      </h3>
-      <p class="opacity-5 hyphenate">And of course you can also just plain ol’ see who took your quiz and what their grade is. In fact, if you’re like most customers you’ll be wondering why you have that LMS. We agree.
-      </p>
-      <p>
-        {{#link-to 'marketing.track-quiz-scores' class='link link-purple'}}Learn more</a>
+        <a href="/present-targeted-offers" class='link link-purple'>Learn more</a>
       </p>
     </div>
   </div>
 
   <div class="grid pt7 pb7">
     <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0">
-      <blockquote class="quote quote-big is-clickable" {{action goToAnchor "marketing.about" "#team"}}>
+      <blockquote class="quote quote-big">
         <p class="quote-blurb">
           Our aim was to create the world’s simplest quiz tool. You just make a quiz, share it, and track results.  That’s it.
         </p>
