testing sommering with links

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="nav-bar-actions">
     <nav class="nav-bar-action">
-      <a href="https://app.qzzr.com/new" class="button button-primary button-with-label tooltip tooltip-primary" data-tooltip="It's free">
+      <a href="https://app.qzzr.com/new" class="button button-primary button-with-label tooltip tooltip-primary mr2" data-tooltip="It's free">
         <i class="icon icon-ss-compose"></i>
         <span class="inline-block">
           <span class="button-label wxl-none">Create a quiz</span>
@@ -328,7 +328,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
 </section>
 
-<div class="page-wrapper">
+<div class="page-wrapper mt6">
 
   <div class="grid h6 text-center">
     <div class="col-4 col-offset-1 col-wxl-6 col-wxl-offset-0 col-wl-12">
