fidgeting with classes for avatar

--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <section class="dumb-center-wrapper">
       <div class="dumb-center-transform">
          <!-- Today Show/ are you snoozing or losing? -->
-        <span class="event-card" href="https://www.qzzr.com/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg">
+        <span class="event-card">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
-              <span class="figure figure-avatar figure-24 mr1" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/82/b1ce20613111e4a24903302d61a54c/qzzr-todayAvatar.png);">
-                <span class="figure-image" >
+              <span class="figure figure-avatar figure-24 mr1">
+                <span class="figure-image" href="https://www.qzzr.com/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/82/b1ce20613111e4a24903302d61a54c/qzzr-todayAvatar.png);">
                 </span>
               </span>
-              <span href="https://www.qzzr.com/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg"class="ellipsis quiz-thumbnail-author">
+              <span name="user"href="https://www.qzzr.com/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg" class="ellipsis quiz-thumbnail-author">
                 Today Show
               </span>
             </span>
